--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@busymango/fetch-driver",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "type": "module",
   "files": [
     "dist",
@@ -17,19 +17,21 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build"
+    "build": "tsc && vite build",
+    "test": "vitest"
   },
   "devDependencies": {
-    "@busymango/is-esm": "^0.0.6",
+    "@busymango/is-esm": "^0.0.7",
     "@types/mime": "^3.0.1",
     "typescript": "^5.0.4",
-    "vite": "^4.0.4"
+    "vite": "^4.0.4",
+    "vitest": "^0.34.1"
   },
   "dependencies": {
     "mime": "^3.0.0"
   },
   "peerDependencies": {
-    "@busymango/is-esm": "^0.0.6",
-    "mime": "^3.0.0"
+    "@busymango/is-esm": ">= 0.0.6",
+    "mime": ">= 3.0.0"
   }
 }
