--- a/package.json
+++ b/package.json
@@ -17,17 +17,19 @@
   },
   "scripts": {
     "dev": "vite",
+    "test": "vitest",
     "build": "tsc && vite build",
-    "test": "vitest"
+    "coverage": "vitest run --coverage"
   },
   "devDependencies": {
-    "@busymango/is-esm": "^0.1.0",
     "@types/mime": "^3.0.1",
+    "@vitest/coverage-v8": "^0.34.4",
     "typescript": "^5.0.4",
     "vite": "^4.0.4",
     "vitest": "^0.34.1"
   },
   "dependencies": {
+    "@busymango/is-esm": "^0.1.0",
     "mime": "^3.0.0"
   },
   "peerDependencies": {
