--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@busymango/fetch-driver",
-  "version": "0.1.15",
+  "version": "0.1.16",
   "type": "module",
   "description": "fetch with middlewares for the browser",
   "files": [
@@ -45,14 +45,15 @@
   },
   "devDependencies": {
     "@types/mime": "^3.0.1",
-    "@vitest/coverage-v8": "^0.34.4",
-    "typescript": "^5.0.4",
-    "vite": "^4.0.4",
-    "vitest": "^0.34.1"
+    "@vitest/coverage-v8": "^1.1.0",
+    "oxlint": "^0.0.22",
+    "typescript": "^5.3.3",
+    "vite": "^5.0.10",
+    "vitest": "^1.1.0"
   },
   "dependencies": {
-    "@busymango/is-esm": "^0.1.1",
-    "mime": "4.0.0-beta.1"
+    "@busymango/is-esm": "^0.1.7",
+    "mime": "4.0.1"
   },
   "peerDependencies": {
     "@busymango/is-esm": ">=0.1.1",
