--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@busymango/fetch-driver",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "type": "module",
   "description": "fetch with middlewares for the browser",
   "files": [
@@ -41,12 +41,23 @@
     "test": "vitest",
     "build": "tsc && vite build",
     "coverage": "vitest run --coverage",
-    "publish:pre": "pnpm build && pnpm coverage"
+    "eslint": "eslint --fix --ext .ts ./",
+    "publish:pre": "pnpm oxlint --fix && pnpm coverage && pnpm build"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^7.13.1",
+    "@typescript-eslint/parser": "^7.13.1",
     "@vitest/coverage-v8": "^1.6.0",
+    "eslint": "8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-simple-import-sort": "^12.1.0",
+    "eslint-plugin-unicorn": "^54.0.0",
+    "eslint-plugin-unused-imports": "^3.2.0",
     "happy-dom": "^14.12.0",
     "oxlint": "^0.4.4",
+    "prettier": "^3.3.2",
     "typescript": "^5.4.5",
     "vite": "^5.3.1",
     "vitest": "^1.6.0"
