--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,10 @@
     "target": "ESNext",
     "useDefineForClassFields": true,
     "module": "ESNext",
-    "lib": ["ESNext", "DOM"],
+    "lib": [
+      "ESNext",
+      "DOM"
+    ],
     "moduleResolution": "Node",
     "strict": true,
     "sourceMap": true,
@@ -17,5 +20,15 @@
     "emitDeclarationOnly": true,
     "declaration": true
   },
-  "include": ["index.ts"]
+  "include": [
+    "index.ts",
+    "examples",
+    "test",
+    "src"
+  ],
+  "exclude": [
+    "vite.config.ts",
+    "index.d.ts",
+    "*.d.ts"
+  ]
 }
