--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "build": "tsc && vite build",
     "coverage": "vitest run --coverage",
     "eslint": "eslint --fix --ext .ts ./",
-    "publish:pre": "pnpm oxlint --fix && pnpm coverage && pnpm build"
+    "publish:pre": "pnpm coverage && pnpm build"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^7.13.1",
@@ -56,7 +56,6 @@
     "eslint-plugin-unicorn": "^54.0.0",
     "eslint-plugin-unused-imports": "^3.2.0",
     "happy-dom": "^16.7.3",
-    "oxlint": "^0.15.8",
     "prettier": "^3.3.2",
     "typescript": "^5.7.3",
     "vite": "^6.0.11",
